--- a/dialog.css
+++ b/dialog.css
@@ -32,6 +32,36 @@
 	font-size: 18px;
 	padding: 0 20px;
 }
+.dialog-close{
+	text-align:center;
+	font-size:12px;
+	font-weight:bold;
+	color:#727272;
+	position:absolute;
+	right: 10px;
+	top:10px;
+	width:18px;
+	height:18px;
+	line-height:20px;
+	overflow:hidden;
+	cursor:pointer;
+	text-shadow:0 0 1px #000;
+	-moz-transition: all .2s;
+	-ms-transition: all .2s;
+	-webkit-transition: all .2s;
+	border-radius:50%;
+}
+.dialog-close:hover{
+	color:#fff;
+	background-color:#727272;
+	text-shadow:0 0 1px #fff;
+	-moz-transform-origin: center center;
+	-moz-transform:rotate(360deg);
+	-ms-transform-origin: center center;
+	-ms-transform:rotate(360deg);
+	-webkit-transform-origin: center center;
+	-webkit-transform:rotate(360deg);
+}
 .dialog-button{
 	bottom: 20px;
 	display: inline-block;
@@ -75,7 +105,8 @@
 	white-space: nowrap;
 	vertical-align: middle;
 }
-.play-button:hover {
+.play-button:hover ,
+.play-button:focus{
 	-moz-box-shadow: 0 1px 0 0 rgba(0,0,0,0.27);
 	-ms-box-shadow: 0 1px 0 0 rgba(0,0,0,0.27);
 	-webkit-box-shadow: 0 1px 0 0 rgba(0,0,0,0.27);
