--- a/dialog.css
+++ b/dialog.css
@@ -29,7 +29,11 @@
 	min-height: 30px;
 	padding:1px 10px;
 	font-size: 13px;
-	border: 1px solid #cacaca;
+	border: 1px solid #ddd;
+}
+.dialog-input:focus{
+	outline:none;
+	border: 1px solid #aaa;
 }
 .dialog-title{
 	font-size: 26px;
@@ -76,6 +80,7 @@
 	right: 20px;
 }
 .play-button{
+	outline:none; 
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
@@ -94,7 +99,7 @@
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	background-color: #fff;
-	border: 1px solid rgba(0,0,0,0.17);
+	border: 1px solid #ddd;
 	color: #737373;
 	cursor: pointer;
 	display: inline-block;
@@ -112,8 +117,7 @@
 	white-space: nowrap;
 	vertical-align: middle;
 }
-.play-button:hover ,
-.play-button:focus{
+.play-button:hover {
 	-moz-box-shadow: 0 1px 0 0 rgba(0,0,0,0.27);
 	-ms-box-shadow: 0 1px 0 0 rgba(0,0,0,0.27);
 	-webkit-box-shadow: 0 1px 0 0 rgba(0,0,0,0.27);
@@ -121,6 +125,9 @@
 	border: 1px solid rgba(0,0,0,0.27);
 	color: #333;
 	cursor: pointer;
+}
+.play-button:focus{
+	border: 1px solid rgba(0,0,0,0.4);
 }
 .play-button:active,
 .play-button.open{
